--- a/src/style/App.css
+++ b/src/style/App.css
@@ -275,7 +275,7 @@ body {
   margin: 2px;
 } */
 
-@media (width < 700px) {
+@media (width < 1000px) {
   .page-container {
     grid-template-rows: 5fr 1fr;
   }
