--- a/src/style/MiniAbout.css
+++ b/src/style/MiniAbout.css
@@ -4,8 +4,7 @@
   --svgStrokeWThree: 15px;
   --aboutTopSpacer: 23%;
   --aboutBottomSpacer: 20%;
-  --circlerRadius: 70px;
-  --color-red: 100;
+  --circleRadius: 70;
 }
 
 .small-about-container {
@@ -21,7 +20,7 @@
     "fourthRow";
   /* flex: 1; */
   height: 100%;
-  width: clamp(200px, 100%, 700px);
+  width: clamp(200px, 100%, 600px);
 
   overflow: hidden;
 }
@@ -101,6 +100,7 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+  position: relative;
 }
 
 .sm-mt-left {
@@ -555,7 +555,7 @@
 /* START OF 2ND LEVEL CHILDREN */
 
 .sm-t-left {
-  flex: 1;
+  flex: 10;
   display: flex;
   height: 100%;
   width: 100%;
@@ -570,7 +570,7 @@
 }
 
 .sm-t-right {
-  flex: 1;
+  flex: 14;
   width: 100%;
   height: 100%;
   position: relative;
@@ -584,6 +584,34 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* border-bottom: 3px var(--primaryDark) dashed; */
+  box-sizing: border-box;
+}
+
+.trc-left {
+  flex: 4;
+  /* background: red; */
+  height: 100%;
+}
+
+.trc-right {
+  flex: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background: green; */
+  height: 100%;
+  position: relative;
+}
+
+.trc-right-dashes {
+  position: absolute;
+  left: 0;
+  bottom: 20%;
+  height: 30%;
+  width: 50%;
+  /* border-left: 1px var(--primaryBlack) dashed; */
+  border-bottom: 1px var(--primaryBlack) dashed;
 }
 
 .sm-top-row-right::after {
@@ -652,6 +680,7 @@
   filter: blur(50px);
 }
 
+
 .sm-m-left {
   box-sizing: border-box;
   align-self: flex-end;
@@ -692,14 +721,39 @@
   bottom: -1.5rem;
 }
 
-/* .sm-go-btn::after {
-  content: '';
+.sm-go-forth-btn {
+  font-family: courierPrime;
   position: absolute;
-  width: 25%;
+  width: 20%;
+  height: 25%;
   right: 0;
   top: 50%;
-  border-bottom: 2px var(--primaryDark) dashed;
+  background-color: var(--primaryBlack);
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--primaryWhite);
+  font-size: 1.5rem;
+  
+  /* color: var(--primaryWhite); */
 }
+
+.go-btn-img-container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.go-btn-arrow {
+  filter: invert(.9);
+  width: 30%;
+}
+
+/* 
 
 .sm-go-btn::before {
   content: '';
